[tool.poetry]
name = "robotframework-jmslibrary"
version = "0.2.0"
description = ""
authors = ["Many Kasiriha <many.kasiriha@dbschenker.com>"]
readme = "README.md"
packages = [{include = "JMS"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
jpype1 = "*"
robotframework = "*"
robotframework-assertion-engine = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
invoke = "*"
coverage = "*"
robotframework-stacktrace = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
